# tech-challenge-1-fiap

./: .gitignore  README.md  pyproject.toml
vitibrasil_scraper/: README.md  __init__.py  cli.py  requirements.txt
vitibrasil_scraper/api/: __init__.py  commercialization.py  exports.py  imports.py  index.py  processing.py  production.py
vitibrasil_scraper/scraper/: __init__.py  base.py  commercialization.py  exports.py  imports.py  processing.py  production.py
