[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vitibrasil_scraper"
dynamic = ["version"]
description = "Scraper e API para dados de vinho e uva do site Vitibrasil"
readme = "vitibrasil_scraper/README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["vinho", "uva", "scraper", "api", "vitibrasil"]
authors = [
    {name = "Luis Nogueira", email = "luis.felipe32971@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/seu_usuario/vitibrasil_scraper"
"Bug Tracker" = "https://github.com/seu_usuario/vitibrasil_scraper/issues"

[project.scripts]
vitibrasil = "vitibrasil_scraper.cli:main" 